# bob

./: .gitignore  BUGS-resolved.md  BUGS.md  NOTES.md  PLAN-critique-deepseek.md  PLAN-critique-kimi.md  PLAN-critique.md  PLAN.md  README.md  mcloop.json  pyproject.toml
bob/: __init__.py
bob/ledger/: SCHEMA.md  __init__.py  events.py  schema.py
bob/ledger/tests/: test_events.py
design/: 0a-iterative-design-critique-deepseek.md  0a-iterative-design-critique-kimi.md  0a-iterative-design-critique.md  0a-iterative-design.md  BACKLOG.md  bob-roadmap.md  desplit-independent-validation-kimi.md  desplit-independent-validation.md  desplit-post-completion-audit-claudecode.md  desplit-post-completion-audit-convergence.md  desplit-post-completion-audit-kimi-charter.md  desplit-post-completion-audit-kimi.md  desplit-post-completion-audit.md  mcloop-desplit-integration-plan.md  parallel-implementation.md  per-project-state-file-architecture-review-codex.md  per-project-state-file-architecture-review-gpt.md  per-project-state-file-architecture-review-kimi.md  per-project-state-file-architecture.md  plan-commit-bobtools-and-mcloop-user-render-fix.md  planfile.md  pre-phase-d-readiness.md  recursive-improvement.md  repository-consolidation-checklist.md
design/consolidation/: README.md  bob-tools-commit-map.txt  duplo-commit-map.txt  mcloop-commit-map.txt  orchestra-commit-map.txt
docs/: model-invocation-rationale.md
