[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bob"
version = "0.1.0"
description = "Bob umbrella package. Slice A: Plan Ledger event schema and projector."
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bob*"]

[tool.pytest.ini_options]
testpaths = ["bob/ledger/tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["images"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["bob"]
exclude = ['build/', 'dist/', '\.venv/']

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true
